@@ -68,3 +68,8 @@
 
 # Awkwardly uneven array shapes
 [:arithmetic, [:array, [:row, [:cell, :C3], [:cell, :D3]], [:row, [:cell, :C4], [:cell, :D4]], [:row, [:cell, :C5], [:cell, :D5]]], [:operator, :*], [:array, [:row, [:cell, :B6]], [:row, [:cell, :B7]]]]	[:array, [:row, [:arithmetic, [:cell, :C3], [:operator, :*], [:cell, :B6]], [:arithmetic, [:cell, :D3], [:operator, :*], [:cell, :B6]]], [:row, [:arithmetic, [:cell, :C4], [:operator, :*], [:cell, :B7]], [:arithmetic, [:cell, :D4], [:operator, :*], [:cell, :B7]]], [:row, [:arithmetic, [:cell, :C5], [:operator, :*], [:error, :"#N/A"]], [:arithmetic, [:cell, :D5], [:operator, :*], [:error, :"#N/A"]]]]
+
+# INDEX in some cases may return an array and so needs to be treated as a special case
+[:arithmetic, [:function, :INDEX, [:array, [:row, [:cell, :A1], [:cell, :B1]], [:row, [:cell, :A2], [:cell, :B2]]], [:null], [:number, 1]], [:operator, :+], [:number, 1]] 	[:array, [:row, [:arithmetic, [:function, :INDEX, [:function, :INDEX, [:array, [:row, [:cell, :A1], [:cell, :B1]], [:row, [:cell, :A2], [:cell, :B2]]], [:null], [:number, 1]], [:number, 1], [:number, 1]], [:operator, :+], [:number, 1]],  [:arithmetic, [:function, :INDEX, [:function, :INDEX, [:array, [:row, [:cell, :A1], [:cell, :B1]], [:row, [:cell, :A2], [:cell, :B2]]], [:null], [:number, 1]], [:number, 1], [:number, 2]], [:operator, :+], [:number, 1]]], [:row, [:arithmetic, [:function, :INDEX, [:function, :INDEX, [:array, [:row, [:cell, :A1], [:cell, :B1]], [:row, [:cell, :A2], [:cell, :B2]]], [:null], [:number, 1]], [:number, 2], [:number, 1]], [:operator, :+], [:number, 1]],  [:arithmetic, [:function, :INDEX, [:function, :INDEX, [:array, [:row, [:cell, :A1], [:cell, :B1]], [:row, [:cell, :A2], [:cell, :B2]]], [:null], [:number, 1]], [:number, 2], [:number, 2]], [:operator, :+], [:number, 1]]]]
+
+[:function, :SUM, [:function, :INDEX, [:array, [:row, [:cell, :A1], [:cell, :B1]], [:row, [:cell, :A2], [:cell, :B2]]], [:null], [:number, 1]]]	[:function, :SUM, [:function, :INDEX, [:array, [:row, [:cell, :A1], [:cell, :B1]], [:row, [:cell, :A2], [:cell, :B2]]], [:null], [:number, 1]]]
